Fix logo text alignment in Safari

--- a/src/css/logo.module.css
+++ b/src/css/logo.module.css
@@ -4,10 +4,6 @@
 }
 
 .logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
     position: relative;
 
     box-sizing: border-box;
@@ -23,6 +19,17 @@
 }
 
 .logo h1 {
+    position: absolute;
+    /*
+    Trick to center logo text without flexbox (necessary for Safari)
+    See https://developers.google.com/web/updates/2016/06/absolute-positioned-children
+    */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
+    height: 60px;
     margin: 0;
 
     font-weight: normal;
@@ -32,7 +39,13 @@
 
 .logo h2 {
     position: absolute;
-    top: 75px;
+    /* Re-use center logo trick to bottom-center subheading (see logo h1) */
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 100%;
+    line-height: 24px;
     margin: 0;
 
     font-size: 24px;
